# DirectSD-Python

./: CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
directsd/: __init__.py  requirements.txt
directsd/analysis/: __init__.py  charpol.py  errors.py  norms.py
directsd/design/: __init__.py  convex.py  lifting.py  polynomial.py
directsd/examples/: _common.py  demos.py  examples.py  help_examples.py
directsd/glopt/: __init__.py  advanced.py  optimize.py
directsd/linalg/: __init__.py  linsys.py  matrices.py  minreal.py  riccati.py
directsd/polynomial/: __init__.py  diophantine.py  operations.py  poln.py  spectral.py  transforms.py  utils.py
directsd/sspace/: __init__.py  design.py  hinfsd.py  plant.py
directsd/tests/: test_directsd.py
directsd/tf/: __init__.py  interconnect.py
directsd/zpk/: __init__.py  zpk.py
